CSS issue fixed on Conversation member panel for background color broken on resizing of browser

--- a/app/react/components/ConversationSettings/ConversationSettings.css
+++ b/app/react/components/ConversationSettings/ConversationSettings.css
@@ -10,6 +10,7 @@
 }
 
 .conversationTitleContainer {
+  flex: none;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -36,10 +37,9 @@
   display: flex;
   flex-direction: row;
   flex: none;
-  /*width: 100%;*/
   overflow: auto;
-  padding: 0 20px;
-  margin-bottom: 1.875rem;
+  padding: 0 1.25rem 1.875rem 1.25rem;
+  background-color: #ffffff;
 }
 
 .conversationMemberTitle {
@@ -59,6 +59,7 @@
   composes: form-group from global;
   padding: 0;
   color: #333333;
+  flex: none;
 }
 
 .input {
@@ -87,9 +88,10 @@
 
 .organizationMembersContainer {
   display: flex;
-  flex: 1;
+  flex: none;
   flex-flow: row wrap;
   width: 100%;
+  height: 100%;
   padding-bottom: 20px;
 }
 
@@ -104,6 +106,7 @@
 }
 
 .actionContainer {
+  flex: none;
   min-height: 10rem;
   display: flex;
   flex-direction: row;
@@ -115,7 +118,8 @@
 .memberSettingsContainer {
   padding: 1.875rem;
   flex: 1;
-  background-color: #EBEFF0;
+  display: flex;
+  flex-direction: column;
 }
 
 .actionButton {
@@ -146,12 +150,12 @@
 }
 
 .inviteMemberLabel {
-  margin: 3.75rem 0 1rem 0;
-  padding: 0 1.875rem;
+  flex: none;
+  padding: 3.75rem 1.875rem 1rem 1.875rem;
   font-family: Gotham-Medium;
   font-size: 1.25rem;
   color: #415764;
-  /*flex: 1;*/
+  background-color: #ffffff;
 }
 
 .conversationMembersContainer {
@@ -223,8 +227,9 @@ and (max-width: 1440px) {
 }
 
 .membersContainer {
-  overflow: auto;
+  overflow-y: auto;
   flex: 1;
   display: flex;
   flex-direction: column;
+  background-color: #EBEFF0;
 }
