--- a/app/react/components/SelectableUser/index.css
+++ b/app/react/components/SelectableUser/index.css
@@ -11,6 +11,7 @@
 }
 .userContainer {
   order: 2;
+  flex: 1;
   max-height: 4rem;
   font-family: Gotham-Book;
   font-size: 1.375rem;
